tests/fail/09_multidim_array.lang
функция main() : целое {
    целое[5][5] м = 0;
    вернуть 0;
}
